dataset1235/2025-2/2947369575/users/2007236882/executions/1003782500_2132966528.log
== SUBMISSION (2025-08-27 23:08:48)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
texto= input()
maiuscula = texxto.upper()
print(maiuscila)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    maiuscula = texxto.upper()
                ^^^^^^
NameError: name 'texxto' is not defined. Did you mean: 'texto'?
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    maiuscula = texxto.upper()
                ^^^^^^
NameError: name 'texxto' is not defined. Did you mean: 'texto'?
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    maiuscula = texxto.upper()
                ^^^^^^
NameError: name 'texxto' is not defined. Did you mean: 'texto'?
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    maiuscula = texxto.upper()
                ^^^^^^
NameError: name 'texxto' is not defined. Did you mean: 'texto'?
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    maiuscula = texxto.upper()
                ^^^^^^
NameError: name 'texxto' is not defined. Did you mean: 'texto'?
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    maiuscula = texxto.upper()
                ^^^^^^
NameError: name 'texxto' is not defined. Did you mean: 'texto'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 23:09:21)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
texto = input()
maiuscula = texto.upper()
print(maiuscula)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
---- user output:
DEAN_WINCHESTER
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
---- user output:
MARTIN_GARRIX
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
---- user output:
SELINA_KYLE_SILVA
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
---- user output:
BILLIE_EILISH
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
---- user output:
HOMEM_DE_FERRO
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
PRIMEIRO_CASO_DE_TESTE
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 23:09:06)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
texto = input()
maiuscula = texxto.upper()
print(maiuscula)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    maiuscula = texxto.upper()
                ^^^^^^
NameError: name 'texxto' is not defined. Did you mean: 'texto'?
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    maiuscula = texxto.upper()
                ^^^^^^
NameError: name 'texxto' is not defined. Did you mean: 'texto'?
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    maiuscula = texxto.upper()
                ^^^^^^
NameError: name 'texxto' is not defined. Did you mean: 'texto'?
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    maiuscula = texxto.upper()
                ^^^^^^
NameError: name 'texxto' is not defined. Did you mean: 'texto'?
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    maiuscula = texxto.upper()
                ^^^^^^
NameError: name 'texxto' is not defined. Did you mean: 'texto'?
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    maiuscula = texxto.upper()
                ^^^^^^
NameError: name 'texxto' is not defined. Did you mean: 'texto'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 23:08:53)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
texto= input()
maiuscula = texxto.upper()
print(maiuscula)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    maiuscula = texxto.upper()
                ^^^^^^
NameError: name 'texxto' is not defined. Did you mean: 'texto'?
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    maiuscula = texxto.upper()
                ^^^^^^
NameError: name 'texxto' is not defined. Did you mean: 'texto'?
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    maiuscula = texxto.upper()
                ^^^^^^
NameError: name 'texxto' is not defined. Did you mean: 'texto'?
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    maiuscula = texxto.upper()
                ^^^^^^
NameError: name 'texxto' is not defined. Did you mean: 'texto'?
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    maiuscula = texxto.upper()
                ^^^^^^
NameError: name 'texxto' is not defined. Did you mean: 'texto'?
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    maiuscula = texxto.upper()
                ^^^^^^
NameError: name 'texxto' is not defined. Did you mean: 'texto'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
